# SegmentationPhotometrique1

./: CMakeLists.txt  README.md  Traitement.h  main.cpp
